Labs/Lab3/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Pat Dale\Desktop\Lab3
-d
C:\Users\Pat Dale\Desktop\Lab3\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Pat Dale\Desktop\Lab3\Lab3a.java
<---- end of javadoc command ---->
Loading source file C:\Users\Pat Dale\Desktop\Lab3\Lab3a.java...
C:\Users\Pat Dale\Desktop\Lab3\Lab3a.java:16: error: illegal start of expression
        for (int j=0;j<1;++){
                           ^
1 error
